Stretch - need to fix some bugs

--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -38,4 +38,10 @@
     .width-100();
     display: none;
   }
+  .toggle-on {
+    display: block;
+  }
+  .toggle-off {
+    display: none;
+  }
 }
